Bug 1022866 - Fix insertion point frame for content distributed to insertion points. r=bz