content/html/content/src/HTMLShadowElement.h
@@ -17,6 +17,8 @@ class HTMLShadowElement MOZ_FINAL : public nsGenericHTMLElement,
 public:
   HTMLShadowElement(already_AddRefed<mozilla::dom::NodeInfo>& aNodeInfo);
 
+  NS_IMPL_FROMCONTENT_HTML_WITH_TAG(HTMLShadowElement, shadow)
+
   // nsISupports
   NS_DECL_ISUPPORTS_INHERITED
 
